[package]
name = "bsky-firehose"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
ciborium = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.0"
futures = "0.3.32"
anyhow = "1.0.102"
hex = "0.4.3"
serde_bytes = "0.11.19"
multibase = "0.9.2"
